# emerald

./: .clang-format  .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  Gfx.cpp  Gfx.hpp  Input.hpp  Log.cpp  Log.hpp  System.hpp  main.cpp
Source/: Assertion.hpp  AssetManager.hpp  Emerald.cpp  Entity.cpp  Entity.hpp  EntityUtils.cpp  EntityUtils.hpp  Gfx.cpp  Gfx.hpp  Input.cpp  Input.hpp  Reflection.cpp  Reflection.hpp  Scene.cpp  Scene.hpp  Subsystem.hpp
Source/Components/: CameraComponent.cpp  CameraComponent.hpp  FreeCameraComponent.cpp  FreeCameraComponent.hpp  NameComponent.cpp  NameComponent.hpp  StaticMeshComponent.cpp  StaticMeshComponent.hpp  Transform.cpp  Transform.hpp
Source/EmeraldFramework/: Assertion.hpp  CMakeLists.txt  Game.cpp  Gfx.cpp  Gfx.hpp  Input.cpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp
Source/EmeraldFramework/ECS/: Entity.hpp
Source/EmeraldFramework/ECS/Components/: ChildContainerComponent.hpp  NameComponent.cpp  NameComponent.hpp  Transform.cpp  Transform.hpp
Source/EmeraldFramework/ECS/Systems/: System.hpp  SystemBase.hpp
Source/Games/Cube/: CMakeLists.txt  main.cpp
Source/Systems/: CameraUpdateSystem.cpp  CameraUpdateSystem.hpp  FreeCameraControlSystem.cpp  FreeCameraControlSystem.hpp  System.hpp  SystemBase.hpp
